umap: module for data proc; remove energy sort; dark mode fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,20 +1,62 @@
+:root {
+  --primary: #3B82F6;
+}
+
+a:not(.custom-link) {
+  text-decoration: none;
+  color: var(--primary);
+  transition: all 0.3s ease;
+  position: relative;
+  font-weight: 600;
+}
+
+a:not(.custom-link)::after {
+  transform-origin: 100% 50%;
+  transform: scale3d(0, 1, 1);
+  transition: transform 0.3s;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background: #64748B;
+  opacity: 0.3;
+  top: 75%;
+  left: 0;
+  pointer-events: none;
+  z-index: 100000;
+}
+a:not(.custom-link):hover::after {
+  transform-origin: 100% 0%;
+  transform: scale3d(1, 1, 1);
+}
+
+
 body, div.v-application {
   background-color: #F8FAFC !important;
 }
 
+body, div.v-application.v-theme--dark {
+  background-color: rgb(var(--v-theme-surface)) !important;
+}
+
+
+.dinovision-logo {
+  position: relative;
+  display: inline-block;
+}
 
 .dinovision-logo::after {
   position: absolute;
   content: "";
   top: 0;
-  left: 0;
+  left: 5px;
   right: 0;
   z-index: -1;
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  --min-scale: 0.5;
-  --max-scale: 0.6;
+  --min-scale: 0.4;
+  --max-scale: 0.5;
   --blur-force: 10px;
   transform: scale(var(--max-scale)) ;
   border-radius: 50%;
@@ -22,7 +64,7 @@ body, div.v-application {
   -moz-filter: blur(5vw);
   -ms-filter: blur(5vw);
   filter: blur(var(--blur-force));
-  background: linear-gradient(270deg, #fa0, var(--primary));
+  background: linear-gradient(270deg, #059669, #020617);
   background-size: 200% 200%;
   animation: animateGlow 10s ease infinite;
 }
